# CryptoPair

./: .env.example  .gitignore  Makefile  README.md  TESTING.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements.txt  tech_spec.md  uvicorn_config.py
deployment/docker/: .dockerignore  Dockerfile  Dockerfile.test
deployment/grafana/: setup-grafana.sh
deployment/grafana/provisioning/dashboards/: crypto-api-dashboard.json  logs-dashboard.json  system-dashboard.json
deployment/grafana/provisioning/datasources/: datasources.yml
deployment/loki/: loki-config.yml
deployment/nginx/: nginx.conf
deployment/prometheus/: prometheus.yml
deployment/promtail/: promtail-config.yml
docs/: circuit-breaker.md
scripts/: check_architecture.py  docker_entrypoint.sh  test_fetched_at.py
src/application/interfaces/: cache_service.py  price_repository.py
src/application/use_cases/: get_price.py
src/data_access/models/: cache_model.py  price_model.py
src/data_access/repositories/: interfaces.py  price_repository.py  redis_cache_repository.py
src/domain/entities/: crypto_price.py
src/domain/value_objects/: price.py
src/infrastructure/api_clients/: __init__.py  base_client.py  coingecko_client.py
src/infrastructure/cache/: __init__.py  optimized_memory_cache.py  warming_cache.py
src/infrastructure/circuit_breaker/: breaker.py  factory.py  persistent_breaker.py
src/infrastructure/repositories/: price_repository.py
src/infrastructure/resilience/: __init__.py  retry_strategies.py
src/infrastructure/services/: cache_metrics_updater.py  cache_service.py  optimized_cache_service.py
src/presentation/: main.py
src/presentation/api/: dependencies.py
src/presentation/api/middleware/: __init__.py  correlation.py  metrics.py
src/presentation/api/routers/: __init__.py  health.py  prices.py
src/presentation/api/schemas/: __init__.py  price_schemas.py
src/presentation/api/v1/routes/: health.py  prices.py  queue.py
src/presentation/api/v1/schemas/: response.py
src/services/: cache_service.py  price_service.py
src/shared/: config.py  exceptions.py  logging.py  metrics_initializer.py  monitoring.py
src/shared/circuit_breaker/: __init__.py  breaker.py  factory.py
tests/: README.md  conftest.py  pytest.ini  requirements-test.txt
tests/integration/: test_api_endpoints.py  test_cache_integration.py  test_health_endpoints.py
tests/load/: k6_test.js  locustfile.py  performance_benchmark.py
tests/unit/application/: test_get_price_use_case.py
tests/unit/domain/: test_crypto_price.py  test_price_value_object.py
tests/unit/infrastructure/: test_circuit_breaker.py  test_coingecko_client.py  test_memory_cache.py  test_optimized_cache.py
tests/unit/services/: test_price_service.py
